[tool.poetry]
name = "lifecalendar"
version = "0.1.0"
description = ""
authors = ["qodot <waitingforqodot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
psycopg2 = "^2.9.7"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.289"
black = "^23.9.1"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
